<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/backred"
        >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel"
            android:layout_marginTop="30dp"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/bagel_fat_one"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@+id/text1"
            android:layout_toRightOf="@+id/text1"
            android:fontFamily="@font/bagel_fat_one"
            android:textColor="@color/white"
            android:textSize="40sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout1"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/text2"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/edit_gmail_login"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/layout1"
            android:layout_centerInParent="true"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/edit_Password_login"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progressBar"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
    <TextView
        android:id="@+id/jsdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text"
        android:textSize="15sp"
        android:textColor="#D5887A7A"
        />
    <TextView
        android:id="@+id/signUp_text"
        android:layout_toEndOf="@+id/jsdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="18sp"
        android:text="@string/signup"
        android:textColor="#19A3E9"
        />
    </RelativeLayout>

</LinearLayout>