<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/backred"
        >

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:fontFamily="@font/bagel_fat_one"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Input_layout1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/text2"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <!-- this one is for frontend -->
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:id="@+id/name_cloud"
            />
        <!-- this one is for backend -->
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Input_layout2"
        android:layout_below="@+id/Input_layout1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/edit_gmail"
            />
        <!-- this one is for backend -->
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Input_layout3"
        android:layout_below="@+id/Input_layout2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <!-- this one is for xml that showing the layouts belowof or right,leftof-->

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/edit_Password"
            />
        <!-- this one is for backend -->
    </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar2"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/signup"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        />
</LinearLayout>



